# licht

./: Cargo.toml  README.md
benches/: bench.rs
src/: backlight.rs  lib.rs  light.rs  main.rs  verbose.rs
src/stepping/: absolute.rs  blend.rs  geometric.rs  linear.rs  mod.rs  parabolic.rs  set.rs
